Feature FAQ Page

--- a/EmulairWEB/Emulair.csproj
+++ b/EmulairWEB/Emulair.csproj
@@ -21,4 +21,9 @@
     <ProjectReference Include="..\Emulair.Common\Emulair.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="wwwroot\icons\svg\" />
+  </ItemGroup>
+
 </Project>
