news + resolved auth

--- a/Emulair.Common/Emulair.Common.csproj
+++ b/Emulair.Common/Emulair.Common.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.8.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
   </ItemGroup>
 
 </Project>
