Restructured the css folders and files

--- a/EmulairWEB/Emulair.csproj
+++ b/EmulairWEB/Emulair.csproj
@@ -24,6 +24,8 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="wwwroot\css\Login\" />
+    <Folder Include="wwwroot\css\Register\" />
     <Folder Include="wwwroot\icons\svg\" />
   </ItemGroup>
 
