Added a frontend automated test with selenium

--- a/Emulair.DataAccess/Emulair.DataAccess.csproj
+++ b/Emulair.DataAccess/Emulair.DataAccess.csproj
@@ -11,13 +11,14 @@
     <PackageReference Include="iTextSharp" Version="5.5.13.3" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.8">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.26">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.26" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="PageList" Version="1.2.3" />
+    <PackageReference Include="SpecFlow" Version="3.9.74" />
     <PackageReference Include="SqlTableDependency" Version="8.5.8" />
     <PackageReference Include="Syncfusion.Pdf.Net.Core" Version="23.2.5" />
   </ItemGroup>
